[package]
name = "dnd-tools"
version = "0.1.0"
authors = ["Daniel Lewis <daniel.lewis.software.engineer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.10.0"
termion = "1.5.5"
ropey = "1.2.0"
unicode-width = "0.1.8"